# eduChain

./: .gitignore  Cargo.toml  README.md  multiversx-workspace.json  multiversx.json
.github/workflows/: ci.yml  devnet.yml
contracts/ect-anchor/: Cargo.toml
contracts/ect-anchor/meta/: Cargo.toml
contracts/ect-anchor/scenarios/: 01_deploy.scen.json  02_anchor_verify.scen.json  03_anchor_duplicate_negative.scen.json
contracts/ect-anchor/src/: ect_anchor.rs
contracts/ect-anchor/tests/: ect_anchor_scenario_rs_test.rs
contracts/ect-anchor/wasm/: Cargo.toml
contracts/ect-escrow/: Cargo.toml
contracts/ect-escrow/meta/: Cargo.toml
contracts/ect-escrow/scenarios/: 01_deploy.scen.json  02_session_create_confirm.scen.json  03_session_dispute_resolve.scen.json
contracts/ect-escrow/src/: ect_escrow.rs
contracts/ect-escrow/wasm/: Cargo.toml
contracts/ect-token/: Cargo.toml
contracts/edu-chain-nft/: Cargo.toml
contracts/edu-chain-nft/meta/: Cargo.toml
contracts/edu-chain-nft/meta/src/: main.rs
contracts/edu-chain-nft/scenarios/: 01_deploy.scen.json  02_add_remove_issuer.scen.json  03_revoke_certificate.scen.json  04_verify_revoked.scen.json  05_verify_unknown.scen.json
contracts/edu-chain-nft/src/: edu_chain_nft.rs
contracts/edu-chain-nft/tests/: edu_chain_nft_scenario_rs_test.rs
contracts/edu-chain-nft/wasm/: Cargo.toml
contracts/edu-chain-nft/wasm/src/: lib.rs
demo/: demo-gui.html  demo.sh
interactor/: Cargo.toml  config.toml  state.toml
interactor/fixtures/: cert1.json  cert1.metadata.jsonld  cert2.json  cert3.json
interactor/src/: anchor.rs  config.rs  e2e.rs  escrow.rs  interactor_main.rs  lib.rs  nft.rs  state.rs  token.rs
(+14 files in other folders)
