[workspace]
members = [
    "contracts/edu-chain-nft",
    "contracts/edu-chain-nft/meta",
    "contracts/ect-token",
    "contracts/ect-token/meta",
    "contracts/ect-escrow",
    "contracts/ect-escrow/meta",
    "contracts/ect-anchor",
    "contracts/ect-anchor/meta",
    "interactor",
]
resolver = "2"
