[package]
name = "rust-interact"
version = "0.1.0"
authors = ["EduChain Team"]
edition = "2021"
publish = false

[[bin]]
name = "rust-interact"
path = "src/interactor_main.rs"

[lib]
path = "src/lib.rs"

[dependencies.edu-chain-nft]
path = "../contracts/edu-chain-nft"

[dependencies.ect-token]
path = "../contracts/ect-token"

[dependencies.ect-escrow]
path = "../contracts/ect-escrow"

[dependencies.ect-anchor]
path = "../contracts/ect-anchor"

[dependencies.multiversx-sc-snippets]
version = "0.65.1"

[dependencies.multiversx-sc]
version = "0.65.1"

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.6"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0"
env_logger = "0.11"

[features]
chain-simulator-tests = []
