[package]
name = "edu-chain-nft"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["EduChain Team"]

[lib]
path = "src/edu_chain_nft.rs"

[dependencies.multiversx-sc]
version = "0.65.1"

[dependencies.multiversx-sc-modules]
version = "0.65.1"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "0.65.1"
